css/styles.css
* {
	margin: 0;
	padding: 0;
}

.container {
	width:  100%;
	height: 100%;
	overflow-y: scroll;
	scroll-behavior: smooth;
	scroll-snap-type: y mandatory;
}

.navbar {
	position: fixed;
	top: 0;
	z-index: 1;
	display: flex;
	width: 100%;
	height: 60px;
	background: rgba(0, 0, 0, 0.7);
}

.navbar ul {
	display: flex;
	list-style: none;
	width: 100%;
	justify-content: center;
}

.navbar ul li {
	margin: 0 1rem;
	padding: 1rem;
}

.navbar ul li a {
	text-decoration: none;
	text-transform: uppercase;
	color:  #f4f4f4;
}

.navbar ul li.active {
	color: #6efaff;
}

.navbar ul li a:hover {
	color: #6efaff;
}

.navbar-small {
	width: 60px;
	height: 60px;
	border-radius: 50%;
	position: fixed;
	top: 10;
	margin: 10px 10px 0px 0px;
	color: #ff0000;
	z-index: 1;
	display: flex;
	display: none;
	text-align: center;
}

.navbar-small:hover {
	color: #00ff00;
	cursor: pointer;
}

#logo {
	width: 400px;
	height: 400px;
}

.about-header {
	color: #ffff00;
}

#intro {
	color: #ffff00;
	background-color: #000000;
}

.arrows {
	display: flex;
	flex-direction: row;
	justify-content: center;
}

section {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	text-align: center;
	width: 100%;
	height: 100vh;
	scroll-snap-align: center;
}

section#home {
	background-image: url(../images/back1.jpg);
	background-repeat: no-repeat;
}

section#about {
	background-image: url(../images/back2.jpg);
	background-repeat: no-repeat;
}

section#about #about-text {
	margin: 20px;
}

section#portfolio {
	background-image: url(../images/back5.jpg);
	background-repeat: no-repeat;
}

section#team {
	background-image: url(../images/back3.jpg);
	background-repeat: no-repeat;
}

section#connect {
	background-image: url(../images/back4.jpg);
	background-repeat: no-repeat;
}

.socialmedia {
	width: 50px;
	height: 50px;
}

#portfolio-title {
	font-size: 3rem;
	color: #ffff00;
}

#kesselman {
	text-decoration: none;
	color: #FF0000;
}

#team-title {
	font-size: 3rem;
	color: #ffff00;
}

.member {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	background-color: #50c878;
	margin: 10px;
	padding: 10px;
}

.member-description {
	background-color: #002d9a;
	padding: 0px 10px 0px 10px;
}

.first {
	font-size: 2rem;
}

.first::first-letter {
	color: #ff0000;
}

.socialmedia {
	text-decoration: none;
	margin: 20px;
}

.facebook {
	color: #3b5998;
}

.twitter {
	color: #1da1f2;
}

.instagram {
	color: #8134af;
}

.email {
	color: #000000;
}

.youtube {
	color: #ff0000;
}

.socialmedia:hover {
	color: #808080;
}

#connect-header {
	color: #ffff00;
	font-size: 4rem;
}

#follow-us-text {
	font-size: 2rem;
}

#social {
	display: flex;
	flex-direction: row;
	justify-content: center;
	background-color: #ffffff;
}

.social-box {
	margin: 25px 50px 0px 50px;
}

.social-box a{
	display: flex;
	flex-direction: column;
	justify-content: center;
}

.social-box a strong {
	display: flex;
	justify-content: center;				
}

.arrows i {
	color: #ffffff;
}

.arrows i:hover {
	color: #00ff00;
}

.arrow-down {
	margin-right: 20px;
}

.mobile-bar {
	height: 100%;
	width: 0;
	position: fixed;
	z-index: 1;
	top: 0;
	left: 0;
	background-color: #111;
	overflow-x: hidden;
	padding-top: 60px;
	transition:  0.5s;
}

#project-learn-more {
	border-radius: 20px;
	background-color: #000000;
	color: #ffffff;
	margin: 20px;
	font-size: 2rem;
	padding: 20px;
	text-decoration: none;
}

#project-learn-more:hover {
	color: #808080;
}

.mobile-bar a {
	padding: 8px 8px 8px 32px;
	text-decoration: none;
	font-size: 25px;
	color: #818181;
	display: block;
	transition: 0.5s;
}

.mobile-bar a:hover {
	color: #6efaff;
}

.mobile-bar a.active {
	color: #6efaff;
}

.container .navbar ul li.active a{
	color: #6efaff;
}

.mobile-bar .closeBtn {
	position: absolute;
	top:  0;
	right: 25px;
	font-size: 36px;
	margin-left: 50px;
}

footer {
	position: fixed;
	left: 0;
	bottom: 0;
	width: 100%;
	background: rgba(0, 0, 0, 0.7);
	color: #ffffff;
	text-align: center;
}

body {
	margin: 0;
	font-family: Arial, Helvetica, sans-serif;
	background: red;
	color:  #fff;
	height: 100vh;
	line-height: 1.6;
	overflow: hidden;
}

@media(max-width: 768px) {
	.container {
		scroll-snap-type: none;
	}

	.arrows {
		display: none;
	}

	#portfolio-title {
		font-size: 2rem;
	}

	#social {
	display: flex;
	flex-direction: row;
	justify-content: center;
	flex-wrap: wrap;
	}

	.socialmedia {
		width: 25px;
		height: 25px;
	}

	#logo {
		width: 50%;
	}

	 .navbar {
		display: none;
	}

	.navbar-small {
		display: inline-block;
	}

	#connect-header {
		font-size: 2rem;
	}

	#follow-us-text {
		font-size: 1rem;
	}

	.mobile-bar {
		padding-top: 15px;
	}

	.mobile-bar a {
		font-size:  18px;
	}
}

